--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -25,3 +25,53 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+/* sam solution */
+
+body {
+  display:flex;
+  flex-direction: column;
+  /*justify-content: space-between;*/
+
+}
+
+.content {
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex: auto;
+  
+}
+.header, .footer {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px;
+  padding:10px;
+}
+
+.right-links, .left-links {
+  list-style-type: none;
+  margin:0;
+  padding:0;
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 15px;
+}
+
+a {
+  /* this removes the line under our links */
+  text-decoration: none;
+  color: rgb(107, 107, 107);
+}
+
+button {
+  padding: 8px 16px;
+  font-weight: bold;
+
+}
+
+.footer {
+  background: #eee;
+}
+
