--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px;
 }
 
 .logo {
@@ -9,11 +13,13 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin: 4px;
 }
+
 
 ul {
   /* this removes the dots on the list items*/
-  list-style-type: none;
+  list-style-type:none;
 }
 
 a {
@@ -22,4 +28,12 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+}
+
+ul {
+  display:flex;
+  justify-content: flex-start;
+  margin:0;
+  padding:0;
+  gap: 8px;
 }
