--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,11 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px;
+  gap: 16px;
 }
 
 .profile-image {
@@ -20,13 +25,14 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
-}
+  }
 
 .logo {
   color: rebeccapurple;
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  padding-left: 16px;
 }
 
 button {
@@ -45,4 +51,22 @@ a {
 
 ul {
   list-style-type: none;
+  display:flex;
+  gap: 8px;
+}
+
+.header-left {
+  display:flex;
+  /* justify-content: left; */
+  align-self: flex start;
+  border: black;
+  border-width: 2px;
+}
+
+.header-right {
+  display:flex;
+  /*justify-content: flex-end;*/
+  gap: 16px;
+  padding-right: 16px;
+
 }
