--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -22,6 +22,19 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
 }
 
+.top-row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.left-container {
+  display: flex;
+  flex:auto;
+  
+}
 .icon {
   color: royalblue;
   font-size: 26px;
@@ -30,9 +43,6 @@ body {
   width: 42px;
   height: 42px;
   border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .close-button {
@@ -66,4 +76,48 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+/* my css modifications */
+
+.modal {
+  padding: 10px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 5px;
+}
+
+.icon {
+  display: flex;
+  flex:none;
+  justify-content:center;
+  align-items:center;
+  margin: 0px;
+}
+
+.right
+{
+  padding:5px;
+  display:flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  flex-grow: 1;
+}
+
+.header {
+  font-size: 20px;
+  font-weight: bold;
+  flex-grow: 1;
+}
+
+.close{
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  flex-grow:1;
+}
+
+.text {
+  
 }
